# SchumacherOCR

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry.yml
Docker/: Dockerfile
article/: README.md
labeling/: README.md  start.sh
schumacher/: cli.py  doc_formatter.py
schumacher/api/: arxiv.py  gpt.py  mathpix.py  utils.py
schumacher/datasets/: __init__.py  example.py  inference.py
schumacher/datastructure/: base.py  sqlalchemy.py
schumacher/image_extraction/: __init__.py
schumacher/ocr/: __init__.py  nougat.py  pdfreader.py  tesseract.py
schumacher/pipeline/: base.py
schumacher/text/: clean.py  doc.py  structure.py
schumacher/train/layout/: __init__.py  coco.py
schumacher/train/ocr/: __init__.py  augmentation.py  dataset.py  metrics.py  utils.py
schumacher/utils/processor/: __init__.py  image.py  raster.py
tests/: config.yaml  conftest.py
tests/api/rate_limiter/: __init__.py  conftest.py  fixture.py
tests/books/: config.yaml  index.yaml
tests/cli/prepare/: test.sh
tests/result/: result.csv
tutorials/: YOLO_training.ipynb  extract_pipeline.ipynb
